# UWC

./: CMakeLists.txt  Drawer.cpp  Drawer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
doc/dabao/: dabao.iss
modules/: calibration.cpp  calibration.h  calibration.ui  cmvcamera.cpp  cmvcamera.h  data_acquisition.cpp  data_acquisition.h  data_acquisition.ui  data_acquisition2.ui  data_management.cpp  data_management.h  data_management.ui  device_management.cpp  device_management.h  device_management.ui  help.cpp  help.h  help.ui  report_generator.cpp  report_generator.h  report_generator.ui  result_verification.cpp  result_verification.h  result_verification.ui  settings.cpp  settings.h  settings.ui  wizard.cpp  wizard.h  wizard.ui
resources/: icons.qrc  qss.qrc
resources/qss/: uwc_style.qss
